
[package]
name = "nebulafx-tomlx"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
homepage.workspace = true
description = "Generic TOML configuration loader with support for nested structures"
keywords = ["toml", "config", "configuration", "loader", "nebulafx"]
categories = ["web-programming", "development-tools", "config"]

[dependencies]
toml = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true

